FEAT: Added color values, new ScrollingActivity of Terms and Conditions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.NotBored"
         tools:targetApi="31">
         <activity
+            android:name=".view.splash.ScrollingActivity"
+            android:exported="false"
+            android:label="@string/terms_text"
+            android:theme="@style/Theme.NotBored.NoActionBar" />
+        <activity
             android:name=".view.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
