--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:theme="@style/Theme.NotBored"
         tools:targetApi="31">
         <activity
-            android:name=".view.splash.ScrollingActivity"
-            android:exported="false"
+            android:name=".view.term.TermActivity"
+            android:exported="true"
             android:label="@string/terms_text"
             android:theme="@style/Theme.NotBored.NoActionBar" />
         <activity
@@ -28,8 +28,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".view.home.HomeActivity"
             android:exported="true" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
