--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,15 @@
         android:theme="@style/Theme.NotBored"
         tools:targetApi="31">
         <activity
+            android:name=".NavActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.term.TermActivity"
             android:exported="true"
             android:label="@string/terms_text"
             android:theme="@style/Theme.NotBored.NoActionBar" />
         <activity
-            android:name=".view.splash.SplashActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
