--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NotBored"
-        tools:targetApi="31"
-        >
+        tools:targetApi="31">
         <activity
             android:name=".SplashActivity"
             android:exported="true"
